# PsicoFinder

./: .gitignore  Makefile  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
.github/workflows/: daily-scraper.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260425_0001_create_therapists.py  730e9ea4ae21_add_is_clinic.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: scrape.py  therapists.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: therapist.py
backend/app/schemas/: scrape.py  therapist.py
backend/app/services/: normalization.py  scrape.py  therapists.py
backend/psicofinder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scraper/: adapters.py  pipeline.py  run.py
docs/: architecture.md
frontend/: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/: App.tsx  index.css
